--- a/playground.ipynb
+++ b/playground.ipynb
@@ -1,28 +1,82 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "orig_nbformat": 2,
+    "colab": {
+      "name": "playground.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "source": [
-    "# Playground"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cBolUTBByrrs"
+      },
+      "source": [
+        "# Playground"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t6-SUBQdyx1E"
+      },
+      "source": [
+        "## Console"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9tWAD6LkzfF_"
+      },
+      "source": [
+        "!pip install kora\r\n",
+        "from kora import console"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ryE7m_5EzD72",
+        "outputId": "d24f08c2-2605-44de-83a7-363c49b8baea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "console.start()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Console URL: https://teleconsole.com/s/d88146dab91101c6d0a50ce73cbbb26b85c25535\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1CIcRuxYz44z"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
